--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Hello Every,<br>
-This is my First Testing repository in github.<br>
+Hello Every
+This is my First Testing repository in github
 I will be going to update it feature.
